--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2361,6 +2361,23 @@ h6,
 #menu-7m .close-icon::after {
   background-color: #ffffff;
 }
+#features7-7r .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-7r .iconbox {
+  background-color: #174034;
+  border-color: #174034;
+}
+#msg-box8-7q .mbr-section-title,
+#msg-box8-7q p {
+  color: #fff;
+}
+#msg-box8-7q .mbr-section-title {
+  color: #000000;
+}
+#msg-box8-7q .lead P {
+  color: #000000;
+}
 #features7-7o .card-subtitle {
   color: #bcbcbc;
 }
