--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2581,3 +2581,78 @@ h6,
 #header3-8s .mbr-section-subtitle {
   text-align: center;
 }
+#menu-99 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-99 .navbar-caption {
+  color: #ffffff;
+}
+#menu-99 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-99 .link,
+#menu-99 .dropdown-item {
+  color: #ffffff;
+}
+#menu-99 .link {
+  font-size: 0.75rem;
+}
+#menu-99 .dropdown-item,
+#menu-99 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-99 .link:hover,
+#menu-99 .dropdown-item:hover,
+#menu-99 .link:focus,
+#menu-99 .dropdown-item:focus {
+  color: #91bdae;
+}
+#menu-99 .link[aria-expanded="true"],
+#menu-99 .dropdown-menu {
+  background: #0a1a16;
+}
+#menu-99 .nav-dropdown-sm .link:focus,
+#menu-99 .nav-dropdown-sm .link:hover,
+#menu-99 .nav-dropdown-sm .dropdown-item:focus,
+#menu-99 .nav-dropdown-sm .dropdown-item:hover {
+  background: #13352b!important;
+}
+#menu-99 .navbar,
+#menu-99 .nav-dropdown-sm,
+#menu-99 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-99 .nav-dropdown-sm .dropdown-menu {
+  background: #174034;
+}
+#menu-99 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-99 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-99 .bg-color.transparent.opened .link:hover,
+#menu-99 .bg-color.transparent.opened .link:focus {
+  color: #91bdae;
+}
+#menu-99 .link[aria-expanded="true"],
+#menu-99 .dropdown-item[aria-expanded="true"] {
+  color: #91bdae!important;
+}
+#menu-99.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-99 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-99 .close-icon::before,
+#menu-99 .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box8-9b .mbr-section-title,
+#msg-box8-9b p {
+  color: #fff;
+}
+#header3-9f .mbr-section-title,
+#header3-9f .mbr-section-subtitle {
+  text-align: center;
+}
